<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etFirstNumber"
        android:hint="@string/etFirstNumberText"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:layout_margin="10dp"
        style="@style/etStyle"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSecondNumber"
        android:hint="@string/etSecondNumberText"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:layout_below="@id/etFirstNumber"
        android:layout_margin="10dp"
        style="@style/etStyle"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etSecondNumber"
        android:id="@+id/containerLayout"
        android:gravity="center">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddition"
        android:text="@string/btnAdditionText"
        style="@style/btnStyle" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSubtraction"
        android:text="@string/btnSubtractionText"
        android:layout_toRightOf="@id/btnAddition"
        android:layout_toEndOf="@id/btnAddition"
        style="@style/btnStyle"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMultiplication"
        android:text="@string/btnMultiplicationText"
        android:layout_toRightOf="@id/btnSubtraction"
        android:layout_toEndOf="@id/btnSubtraction"
        style="@style/btnStyle"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDivision"
        android:text="@string/btnDivisionText"
        android:layout_toRightOf="@id/btnMultiplication"
        android:layout_toEndOf="@id/btnMultiplication"
        style="@style/btnStyle" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvResult"
        android:layout_below="@id/containerLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        style="@style/tvStyle"/>


</RelativeLayout>